--- a/starter/style.css
+++ b/starter/style.css
@@ -10,7 +10,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
-  background-image: url(/starter/the-matrix-digital-rain.jpg);
+  background-image: url(./the-matrix-digital-rain.jpg);
 }
 
 
