--- a/starter/style.css
+++ b/starter/style.css
@@ -30,8 +30,8 @@ header {
   padding-left: 500px;
   padding: 0px;
   padding-top: 0px;
-  color: hsl(200, 23%, 97%);
-  background-color: hsl(360, 91%, 36%);
+  /* color: hsl(200, 23%, 97%);
+  background-color: hsl(360, 91%, 36%); */
 
 }
 
@@ -45,6 +45,7 @@ header {
   margin: 0 auto;
   max-width: 800px;
   padding: 30px 40px;
+  margin-top: 100px;
 }
 
 .card-header::after {
@@ -139,5 +140,10 @@ button[disabled] {
   .btn {
     font-size: 0.8rem;
   }
+}
+
+.title {
+
+  text-align: center;
 }
 
